--- a/idadeAnimal.html
+++ b/idadeAnimal.html
@@ -186,7 +186,7 @@
 
                 <div id="picLoading" class="col col-lg-4" >
                     <div id="loading" class="loading">
-                        <video class="confiaClass"  height="200" autoplay loop>
+                        <video class="confiaClass"  height="200" autoplay loop muted>
                             <source src="./assets/images/tinified/animal.mp4" type="video/mp4" />
                             Atualize seu navegador.
                         </video>
