--- a/terra.html
+++ b/terra.html
@@ -86,7 +86,7 @@
                 $("#loading").fadeOut(800, function()
                 {
                     $( "#loading" ).remove();
-                    $("#picLoading").append('<video class="confiaClass"  height="200" autoplay loop> <source src="./assets/images/tinified/iguess.mp4" type="video/mp4" /> Atualize seu navegador.</video>');
+                    $("#picLoading").append('<video class="confiaClass"  height="200" autoplay loop muted> <source src="./assets/images/tinified/iguess.mp4" type="video/mp4" /> Atualize seu navegador.</video>');
                 }); 
                 $("#video").play(); 
             }
