--- a/notdino.html
+++ b/notdino.html
@@ -84,7 +84,7 @@
                 <div id="picLoading" class="col col-lg-3" >
                     <div id="loading" class="loading">
                         
-                        <video class="confiaClass" height="200" autoplay loop>
+                        <video class="confiaClass" height="200" autoplay loop muted>
                             <source src="./assets/images/tinified/slow.mp4" type="video/mp4" />
                             Atualize seu navegador.
                         </video>
