--- a/terra.html
+++ b/terra.html
@@ -198,7 +198,7 @@
             <div class="row align-items-center" >
                 <div class="col" >
                     <h2 class="display-5">4,5 bilhões de anos em apenas 24h</h2>
-                    <p class="lead">Imagine se pudessemos compactar toda as história da terra em apenas 24 horas. </p>
+                    <p class="lead">Imagine se pudessemos compactar toda a história da terra em apenas 24 horas. </p>
                 </div>
                 <div id="picLoading" class="col col-lg-4" >
                     <div id="loading" class="loading">
