--- a/idadeAnimal.html
+++ b/idadeAnimal.html
@@ -60,6 +60,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="notdino.html">Quão rápido você é</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="penalTea.html">PenalTea</a>
+                    </li>
                     
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Desativado</a>
