--- a/terra.html
+++ b/terra.html
@@ -62,6 +62,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="notdino.html">Quão rápido você é</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="penalTea.html">PenalTea</a>
+                    </li>
                     
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Desativado</a>
@@ -198,7 +202,7 @@
             <div class="row align-items-center" >
                 <div class="col" >
                     <h2 class="display-5">4,5 bilhões de anos em apenas 24h</h2>
-                    <p class="lead">Imagine se pudessemos compactar toda a história da terra em apenas 24 horas. </p>
+                    <p class="lead">Imagine se pudessemos compactar toda as história da terra em apenas 24 horas. </p>
                 </div>
                 <div id="picLoading" class="col col-lg-4" >
                     <div id="loading" class="loading">
